eliminate the tedious works of handling communications errors and 
parsing JSON results.

Android and Python Desktop application developers can access 
remote SQL databases and/or SQL databases in the cloud by simply 
including standard JDBC calls in their code, just like 
they would for a local database.

The AceQL Python Client SDK is licensed under the Apache 2.0
License.


AceQL Python Client SDK - Version 4.0 - 14-Apr-2021
----------------------------------------------------

What's New:
- The SDK supports now Python 3.9.
- Type checks have been added to all public methods.
- The new ConnectionOptions class is now used to pass
  options at Connection creation.
- The whole API has been cleaned for the sake of ease of use.
  See User Guide.


AceQL Python Client SDK - Version 3.3 - 11-Nov-2020
----------------------------------------------------

What's New:
- The new Connection.add_request_headers()  and
  Connection.reset_request_headers() methods respectively allow
  to  set or reset request headers for the session.


AceQL Python Client SDK - Version 3.2.2 - 28-Jul-2020
-----------------------------------------------------

What's New:
- Connection class includes now get_client_version_full() that returns
  Python version along AceQL version.
- Add remaining refactor for compliance with codacy.com
  best practices.


AceQL Python Client SDK - Version 3.2.1 - 21-Jul-2020
-----------------------------------------------------

What's New:
- Add remaining refactor for compliance with 
  codacy.com best practices.


AceQL Python Client SDK - Version 3.2 - 17-Jul-2020
----------------------------------------------------

What's New:
- Connection get_client_version() is now static.
- Code has been refactored in order to follow
  codacy.com best practices.


AceQL Python Client SDK - Version 3.1.1 - 09-Jun-2020
----------------------------------------------------

Bugs fixed:
- On SELECT, a SQL type to be decoded as float value would be rendered